--- a/index2.html
+++ b/index2.html
@@ -4,91 +4,128 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <title>MY PORTFOLIO</title>
+  
+  <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/82fac282cd.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="styles2.css">
-  <title>MY PORTFOLIO</title>
 </head>
-
+ 
 
 <body>
   <!-- ****************************HEADER SECTION*********************** -->
-<header>
-  <div class="header">
-    <div class="header__image"><img src="" alt=""></div>
-    <nav>
-      <a href="#" class="header-brand">PORT<span class="header-brand__span">FOLIO</span></a>
-      <ul>
-        <li><a href="#">HOME</a></li>
-        <li><a href="#">ABOUT</a></li>
-        <li><a href="#">PORTFOLIO</a></li>
-        <li><a href="#">CONTACT</a></li>
-      </ul>
-    </nav>
-  <div class="header-text">
-  <h1>Reyna Jane Cabuga</h1>
-  <h2>Freelance Front-end Web Developer</h2>
-  </div>
-  </div>
+  <header>
+    <div class="header" id="home">
+        <div class="header__image"><img
+                src="https://github.com/KodeGo-Bootcamp/HTML-Activity-Images/blob/main/pexels-royal-anwar-450213.jpg?raw=true"
+                alt="header image small" loading="lazy"></div>
+        <nav class=" fixed-top navbar navbar-expand-lg navbar-light bg-dark navbar-dark"
+            style="background-color:#24232360 !important;">
+            <div class="container-fluid">
+                <a href="#" class="header-brand navbar-brand">PORT<span class="header-brand__span">FOLIO</span></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                        <li class="nav-item"><a href="#home">Home</a> </li>
+                        <li class="nav-item"><a href="#about">About</a> </li>
+                        <li class="nav-item"><a href="#portfolio">Portfolio</a> </li>
+                        <li class="nav-item"><a href="#contact">Contact</a> </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+        <!-- Desktop -->
+        <div class="header-text">
+            <h1>Reyna Jane Cabuga</h1>
+            <h2>Freelance Front-end Web Developer</h2>
+        </div>
+        <!-- Mobile 600 max-width -->
+        <div class="header-text--2">
+            <h1>Web Developer</h1>
+            <h2>Hi I am, <span>Reyna Jane Cabuga</span>
+                <br>Let's Connect
+            </h2>
+        </div>
+    </div>
 </header>
-
 <!-- **************************** ABOUT ME SECTION *************************** -->
 <section>
-  <div class="about">
-    <div class="about-text">
-      <h2>ABOUT ME</h2>
-      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eum dignissimos 
-        deserunt ad provident hic perspiciatis facere ab expedita est numquam, 
-        quod, error officiis pariatur odio repellendus molestiae incidunt quas? Maiores?</p>
-    </div>
-    <div class="about-skills">
-      <h3 class="about-skills__3--1">Skills</h3>
-      <h3 class="about-skills__3--2">Experience</h3>
-      <h3 class="about-skills__3--3">Education</h3>
-    </div>
+  <div class="about" id="about">
+      <div class="about-img">
+          <img src="https://github.com/KodeGo-Bootcamp/HTML-Activity-Images/blob/main/pexels-royal-anwar-6981883.jpg?raw=true"
+              alt="mobile img for about section" loading="lazy">
+      </div>
+      <div class="about-text">
+          <h2>ABOUT ME</h2>
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repellat, minima! Dolores distinctio
+              debitis
+              veritatis porro. Ut officiis voluptatum nesciunt. Adipisci obcaecati omnis a.</p>
+      </div>
+      <div class="about-skills">
+          <h3 class="about-skills__h3--1">Skills</h3>
+          <h3 class="about-skills__h3--2">Experience</h3>
+          <h3 class="about-skills__h3--3">Education</h3>
+
+      </div>
+      <div class="about__content">
+          <p class="about__para--1">HTML & CSS</p>
+          <p>Build websites with HTML & CSS</p>
+      </div>
   </div>
 </section>
-
 <!-- **************************** MY PORTFOLIO SECTION *************************** -->
 <section>
-  <div class="portfolio">
-    <h2>MY PORTFOLIO</h2>
-    <div class="portfolio__img"><img src="/img/Portfolio-templates.png" alt="ports"></div>
-    <div class="portfolio__img"><img src="/img/Portfolio-templates2.png"></div>
-    <div class="portfolio__img"><img src="/img/download.png"></div>
+  <div class="portfolio" id="portfolio">
+      <h2>MY PORTFOLIO</h2>
+      <div class="portfolio__container">
+          <div class="portfolio__img"><img
+                  src="/img/download.png"
+                  alt="dog photo blog" loading="lazy"></div>
+          <div class="portfolio__img"><img
+                  src="https://github.com/KodeGo-Bootcamp/HTML-Activity-Images/blob/main/pexels-kat-smith-551628.jpg?raw=true"
+                  alt="sample image2" loading="lazy"></div>
+          <div class="portfolio__img"><a
+                  href="https://www.figma.com/proto/30xz0Mw7r4JeJT9PI3eTbE/Simple-Wireframe?node-id=9%3A9&scaling=min-zoom&page-id=0%3A1"
+                  target="_blank"><img src="image/tea-shop-landingPage3.PNG" alt="RBSL Tea shop landing page"
+                      loading="lazy"></a></div>
+      </div>
+      <a href="#" class="portfolio__btn">See More</a>
   </div>
-  <a href="#" class="portfolio__btn">See More</a>
-</div>
 </section>
 
 <!-- **************************** CONTACT SECTION *************************** -->
 
 <section>
-  <div class="contact">
-  <div class="contact__container">
-    <div class="contact__row">
-      <div class="contact-left">
-        <h2>Contact Me</h2>
-        <p><i class="fa-sharp fa-solid fa-envelope-circle-check"></i>reynajanec14@gmial.com</p>
-         <p><i class="fa-solid fa-phone"></i>0967-693-7822</p>
-         <div class="contact-left__icons">
-          <a href="#"><i class="fa-brands fa-facebook"></i></a>
-          <a href="#"><i class="fa-brands fa-linkedIn"></i></a>
-         </div>
-         <a href="cv.pdf" download class="contact__btn contact__btn--1">Download CV</a>
+  <div class="contact" id="contact">
+      <div class="contact__container">
+          <div class="contact__row">
+              <div class="contact-left">
+                  <h2>Contact Me</h2>
+                  <p><i class="fa-sharp fa-solid fa-envelope-circle-check"></i>reynajanec14@email.com</p>
+                  <p><i class="fa-solid fa-phone"></i>0967-693-7822</p>
+                  <div class="contact-left__icons">
+                      <a href="#"><i class="fa-brands fa-facebook"></i></a>
+                      <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+                  </div>
+                  <a href="downloads/sample-cv.pdf" download class="contact__btn contact__btn--1">Download CV</a>
+              </div>
+              <div class="contact-right">
+                  <form action="">
+                      <input type="text" placeholder="Your name" required>
+                      <input type="text" placeholder="Your email" required>
+                      <textarea name="" id="" cols="30" rows="10" placeholder="Your Message"></textarea>
+                      <button type="submit" class="contact__btn contact__btn--2">Submit</button>
+                  </form>
+
+              </div>
+          </div>
       </div>
-      <div>
-        <form action="">
-          <input type="text" placeholder="Your name" required>
-          <input type="text" placeholder="Your name" required>
-          <textarea name="" id="" cols="30" rows="10" placeholder="Your Message"></textarea>
-        <button type="submit" class="contact__btn contact__btn--2">Submit</button>
-      </form>
-     </div>
-     </div>
-    </div>
   </div>
 </section>
 
@@ -96,6 +133,12 @@
 <footer>
   <p>Copyright 2023 &copy; Reyna Jane Cabuga</p>
 </footer>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
+  integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
+  crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"
+  integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD"
+  crossorigin="anonymous"></script>
 
 </body>
 </html>
